# mlp-from-scratch

./: README.md  example.ipynb  main.py  mlp.py  pyproject.toml
