[project]
name = "mlp-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.4",
]

[project.optional-dependencies]
example =[
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "ucimlrepo>=0.0.7",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
]
